...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VISUALIZZA LA TUA SITUAZIONE " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Yc-x1-0sg">
                                        <rect key="frame" x="0.0" y="0.0" width="208.5" height="16"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <color key="textColor" red="0.42094755172729492" green="0.46545147895812988" blue="0.5451088547706604" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RELATIVA AI PAGAMENTI" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmA-HX-dO7">
                                        <rect key="frame" x="28" y="24" width="152.5" height="16"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <color key="textColor" red="0.42094755169999998" green="0.465451479" blue="0.54510885480000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.58124101161956787" green="0.61095207929611206" blue="0.66667455434799194" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lfb-EU-9K3" customClass="BlueRoundedButton" customModule="SoftEngineUniNA" customModuleProvider="target">
                                <rect key="frame" x="147" y="283" width="81" height="34"/>
                                <state key="normal" title="Visualizza"/>
                                <connections>
                                    <action selector="visualizzaButtonDidPressed:" destination="G7J-eI-VXH" eventType="touchUpInside" id="gjs-Jv-8uc"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fZX-Ae-QOA">
                                <rect key="frame" x="16" y="322" width="343" height="215"/>
...
                            <constraint firstItem="cFf-tE-2JW" firstAttribute="centerX" secondItem="ZUV-qs-dem" secondAttribute="centerX" id="rOJ-Et-tSg"/>
                            <constraint firstItem="2fZ-b3-5BA" firstAttribute="top" secondItem="cFf-tE-2JW" secondAttribute="bottom" constant="12" id="rdY-HP-JKD"/>
                            <constraint firstItem="bPp-Ud-Sa7" firstAttribute="top" secondItem="8Yl-Vv-1hY" secondAttribute="bottom" id="sJb-DR-Xcm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="PT1-Y3-Vhg">
                        <barButtonItem key="rightBarButtonItem" title="Nuova Lettura" id="txR-00-LzJ">
                            <connections>
                                <action selector="nuovaLetturaButtonDidPressed:" destination="G7J-eI-VXH" id="4GG-Eh-kli"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                    <action selector="loginButtonDidPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nf1-zH-plv"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vlR-AD-2cs">
                                <rect key="frame" x="227" y="514" width="51" height="31"/>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accedi come : Tecnico" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAV-WN-N2X" customClass="TouchableLabel" custom
                                <rect key="frame" x="90.5" y="300" width="194.5" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" red="0.42491608858108521" green="0.46930819749832153" blue="0.55295246839523315" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <pickerView hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H0a-mS-zDJ">
...
