...
        addGestureRecognizerToView()
        initDateLabels()
        // Do any additional setup after loading the view.
    }
    
    override func viewWillAppear(_ animated: Bool) {
        self.navigationItem.leftBarButtonItem = UIBarButtonItem.init(title: "Log Out", style: .plain, target: self, action: #selector(self.showComeBackLoginAlertMessage))
    }
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let element = letture[indexPath.row]
        if element["effettuataDa"] != nil{ //lettura
            let cell = tableView.dequeueReusableCell(withIdentifier: "letturaCell", for: indexPath) as! LetturaTableViewCell
...
        performSegue(withIdentifier: "fromVisualizzaToInvia", sender: nil)
    }
    
    
    @objc private func showComeBackLoginAlertMessage(){
        let alert = UIAlertController(title: "Attenzione", message: "Vuoi davvero effettura il log out?", preferredStyle: .alert)
        let yes = UIAlertAction(title: "Si", style: .destructive) { (action) in
            self.navigationController?.popViewController(animated: true)
        }
        let no = UIAlertAction(title: "No", style: .default, handler: nil)
        alert.addAction(no)
        alert.addAction(yes)
        self.present(alert, animated: true, completion: nil)
...
