...
        imageView.frame = CGRect(x:10, y: textField.frame.height/5, width: size, height: size)
        textField.leftViewMode = .always
        textField.addSubview(imageView)
    }
    
    private func setLoginButtonTitle(){
        loginButton.setTitle("Log In", for: .normal)
    }
    
    private func initRememberSwitch(){
        rememberSwitch.onTintColor = UIColor.init(red: 0, green: 186/255, blue: 227/255, alpha: 1)
        rememberSwitch.transform = CGAffineTransform(scaleX: 0.50, y: 0.50)
    }
...
